# GameEngine

./: .gitignore  CMakeLists.txt  Moteur.sln  README.md
Models/: cube.mtl
Models/Sponza/: sponza.mtl
Moteur/: Moteur.vcxproj  Moteur.vcxproj.filters  imgui.ini  interface.cpp  interface.h  main.cpp  rendererfacade.cpp  rendererfacade.h
Moteur/Descriptor/: descriptorpoolbuilder.h  descriptorpoolwrapper.cpp  descriptorpoolwrapper.h  descriptorsetlayoutbuilder.h
Moteur/Pass/: framebufferbuilder.cpp  framebufferbuilder.h  pipelinebuilder.cpp  pipelinebuilder.h  pipelinelayoutbuilder.h  renderpass.cpp  renderpass.h  renderpassbuilder.cpp  renderpassbuilder.h  subpass.cpp  subpass.h
Moteur/Pass/ImGui/: imguipass.cpp  imguipass.h  imguisubpass.cpp  imguisubpass.h
Moteur/Pass/RenderFullscreen/: fullscreensubpass.cpp  fullscreensubpass.h  renderfullscreenpass.cpp  renderfullscreenpass.h
Moteur/Pass/RenderSceneGraph/: fillgbuffersubpass.cpp  fillgbuffersubpass.h  renderdeferredpasses.cpp  renderdeferredpasses.h
Moteur/Pass/Voxelization/: voxelizationgeometrysubpass.cpp  voxelizationgeometrysubpass.h  voxelizationpass.cpp  voxelizationpass.h  vxaopass.cpp  vxaopass.h
Moteur/Physics/: DynaObject.cpp  DynaObject.h
Moteur/SceneGraph/: camera.h  drawcommand.h  drawer.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  materialkind.h  materialmanager.cpp  materialmanager.h  meshmanager.cpp  meshmanager.h  node.cpp  node.h  scenegraph.cpp  scenegraph.h  scenegraphbuffer.cpp  scenegraphbuffer.h
Moteur/SceneGraph/Material/: abstractuniquematerialmanager.cpp  abstractuniquematerialmanager.h  albedocolormaterialmanager.cpp  albedocolormaterialmanager.h  albedotexturematerialmanager.cpp  albedotexturematerialmanager.h  materialsmanager.cpp  materialsmanager.h  pbrnormaltexturematerialmanager.cpp  pbrnormaltexturematerialmanager.h
Moteur/SceneGraph/ModelImporter/: material.cpp  material.h  mesh.cpp  mesh.h  modelimporter.cpp  modelimporter.h
Moteur/ShaderGenerator/: FillGBufferShaderBuilder.cpp  FillGBufferShaderBuilder.h  ShaderGenerator.cpp  ShaderGenerator.h
Moteur/Tools/: geometry.cpp  geometry.h  glm.h  logger.cpp  logger.h  stream.h  string_tools.cpp  string_tools.h  variadics.h  vector_view.h  void_t.h
Moteur/Tools/Maths/: Mat3.cpp  Mat3.h  Vec3.cpp  Vec3.h  Vec3.inl
Moteur/Transfer/: bufferfactory.cpp  bufferfactory.h  imagefactory.cpp  imagefactory.h
Moteur/Vulkan/: ShaderCompiler.cpp  ShaderCompiler.h  buffer.cpp  buffer.h  chunkallocator.cpp  chunkallocator.h  commandbuffersubmitter.cpp  commandbuffersubmitter.h  commandpool.cpp  commandpool.h  descriptorpool.cpp  descriptorpool.h  descriptorsetlayout.cpp  descriptorsetlayout.h  device.cpp  device.h  deviceallocator.cpp  deviceallocator.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  imageloader.cpp  imageloader.h  imageview.cpp  imageview.h  input.cpp  input.h  instance.cpp  instance.h  memoryblock.cpp  memoryblock.h  memorychunk.cpp  memorychunk.h  pipeline.cpp  pipeline.h  pipelinelayout.cpp  pipelinelayout.h  (+11 more)
Moteur/Window/: window.cpp  window.h
Moteur/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imguiinstance.cpp  imguiinstance.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
Shaders/: compile.bat
Shaders/ImGUI/: imgui.frag  imgui.vert  imgui_frag.spv  imgui_vert.spv
Shaders/RenderFullScreen/: finalrendering.frag  finalrendering.spv  quad.vert  quad_vert.spv  visualizationbuffer.frag  visualizationbuffer.spv
Shaders/RenderSceneGraphRelated/: fillgbufferalbedocolor.frag  fillgbufferalbedocolor_frag.spv  fillgbufferalbedotexture.frag  fillgbufferalbedotexture_frag.spv  fillgbufferpbrtexture.frag  fillgbufferpbrtexture_frag.spv  renderscenegraph.vert  renderscenegraph_vert.spv
Shaders/Voxelization/: geometrydownsampler.comp  geometrydownsampler.spv  visualization.frag  visualization.spv  voxelization.geom  voxelization.vert  voxelization_geom.spv  voxelization_vert.spv  voxelizationgeometry.frag  voxelizationgeometry_frag.spv  vxao.frag  vxao.spv
libraries/lib/: OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  SPIRV.lib  assimp.lib  glfw3.lib
